--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Liste des publication</title>
@@ -8,8 +8,110 @@
 <body>
 
 <div class="container">
-    <h1>Application Recherches</h1>
+    <h1>Liste des publication</h1>
+    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Ajouter une publication</button>
+    <div th:if="${publications.empty}">
+        No Data.
+    </div>
+    <table class="table table-striped" style="margin-top: 60px;">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Titre</th>
+            <th scope="col">Type</th>
+            <th scope="col">Publicher</th>
+            <th scope="col">Année</th>
+            <th scope="col">Volume</th>
+            <th scope="col">Maison</th>
+            <th scope="col">ifact</th>
+            <th scope="col">Q</th>
+            <th scope="col">URL/ISBN</th>
+            <th scope="col">Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="publication: ${publications}">
+            <th scope="row"><span th:text="${publication.id}"></span></th>
+            <td><span th:text="${publication.title}"></span></td>
+            <td><span th:text="${publication.type}"></span></td>
+            <td><span th:text="${publication.publicher}"></span></td>
+            <td><span th:text="${publication.annee}"></span></td>
+            <td><span th:text="${publication.volume}"></span></td>
+            <td><span th:text="${publication.maison_edit}"></span></td>
+            <td><span th:text="${publication.ifact}"></span></td>
+            <td><span th:text="${publication.Q}"></span></td>
+            <td><span th:text="${publication.URL_ISBN}"></span></td>
+            <td>
+                <div class="btn-group btn-group-sm">
+                    <a href="#" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Update</a>
+                    <a href="#" class="btn btn-danger">Delete</a>
+                </div>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Nouvelle publication</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!--<form method="post" th:action="@{/publication/add}" th:object="${publication}">
+                        <div class="mb-3">
+                            <label for="Titre-name" class="col-form-label">Titre de la publication*:</label>
+                            <input th:value="*{publication.title}" type="text" class="form-control" id="Titre-name" />
+                        </div>
+                        <div class="input-group mb-3">
+                            <select class="form-select" id="Type-name" th:field="*{type}">
+                                <option selected>Choisir le type* ...</option>
+                                <option value="1">Revues internationales indexées</option>
+                                <option value="2">Revues comité de lecture</option>
+                                <option value="3">Revues sanscomité de lecture </option>
+                                <option value="4">Ouvrages de recherche</option>
+                                <option value="5">Chapitres d’ouvrage</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="annee-name" class="col-form-label">Année de publication*:</label>
+                            <input type="text" class="form-control" id="Annee-name" th:field="*{annee}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="Publicher-name" class="col-form-label">Publicher*(Nom journale/Titre d'ouvrage):</label>
+                            <input type="text" class="form-control" id="Publicher-name" th:field="*{publicher}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="volume-name" class="col-form-label">Volume, issue, pages (Revues):</label>
+                            <input type="text" class="form-control" id="volume-name" th:field="*{volume}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="Maison-name" class="col-form-label">Maison d’édition(Ouvrage):</label>
+                            <input type="text" class="form-control" id="Maison-name" th:field="*{maison_edit}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="Ifact-name" class="col-form-label">Ifact(Revue indexé):</label>
+                            <input type="text" class="form-control" id="ifact-name" th:field="*{ifact}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="Q-name" class="col-form-label">Q(Revue indexé):</label>
+                            <input type="text" class="form-control" id="Q-name" th:field="*{Q}">
+                        </div>
+                        <div class="mb-3">
+                            <label for="URL-name" class="col-form-label">URL(ISBN pour les ouvrages)*:</label>
+                            <input type="text" class="form-control" id="URL-name" th:field="*{URL_ISBN}">
+                        </div>
+                    </form>-->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success">Ajouter</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 </body>
 </html>
