--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -44,7 +44,7 @@
             <td>
                 <div class="btn-group btn-group-sm">
                     <a href="#" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Update</a>
-                    <a href="#" class="btn btn-danger">Delete</a>
+                    <a th:href="@{/publication/delete/{id}(id=${publication.id})}" class="btn btn-danger">Delete</a>
                 </div>
             </td>
         </tr>
@@ -112,6 +112,5 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
 </body>
 </html>
